
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander
- GL   Guillaume Lelarge

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2007-12-17 DP  1.8.1  Refresh the tree without erroring after creating a new
                      package on EnterpriseDB.
2007-12-17 DP  1.8.1  Fix a crash that occured if an object called '%' was
                      selected in the treeview, per Alexander Steffens.
2007-12-14 DP  1.8.1  Fix a line number error in the debugger seen with
                      procedures which start on the same line as the 'CREATE
                      PROCEDURE foo IS ...' Per report from Heikki Linnakangas.
2007-12-14 GL  1.8.1  Cleanup the covering index control logic in the Foreign
                      Key dialogue.
2007-12-13 GL  1.8.1  Fix to refresh version string and number, and last OID,
                      per a report from Alexander Kirpa.
2007-12-12 DP  1.8.1  Disable CREATE FUNCTION etc. under EnterpriseDB packages
                      because they are created as part of the main package 
                      body. 
2007-12-12 DP  1.8.1  Fix some broken references to online help pages.
2007-12-12 DP  1.8.1  Don't offer 'Drop Cascaded' unless the user can 'Drop'
                      the object.
2007-12-12 DP  1.8.1  Prevent non-superusers from attempting to use the
                      debugger because the plugin API won't let them anyway.
2007-12-11 DP  1.8.1  Check that functions exist before debugging or setting
                      global breakpoints on them. Remove them from the treeview
                      if not.
2007-12-11 DP  1.8.1  Correct the URL for the EDB public synonym help page
2007-12-10 DP  1.8.1  Handle the corner case when a user includes quotes in an