@@ -90,6 +90,10 @@ bool debuggerFactory::CheckEnable(pgObject *obj)
     if (!obj)
         return false;
 
+    // Can't debug catalog objects.
+    if (obj->GetSchema()->GetMetaType() == PGM_CATALOG)
+        return false;
+
     // Must be a super user to create breakpoints of any kind.
     if (!obj->GetServer() || !obj->GetServer()->GetSuperUser())
         return false;
@@ -194,6 +198,10 @@ wxWindow *breakpointFactory::StartDialog(frmMain *form, pgObject *obj)
 bool breakpointFactory::CheckEnable(pgObject *obj)
 {
     if (!obj)
+        return false;
+
+    // Can't debug catalog objects.
+    if (obj->GetSchema()->GetMetaType() == PGM_CATALOG)
         return false;
 
     // Must be a super user to create breakpoints of any kind.
