@@ -36,6 +36,7 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-12-19 DP  1.8.1  Prevent the user from trying to debug catalog objects.
 2007-12-17 DP  1.8.1  Refresh the tree without erroring after creating a new
                       package on EnterpriseDB.
 2007-12-17 DP  1.8.1  Fix a crash that occured if an object called '%' was
